k8s/dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-dep
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/saleor/saleor-dashboard:latest
          ports:
            - name: dashboard-port
              containerPort: 80
      restartPolicy: Always # Adjust the restart policy as needed
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 9000
      targetPort: dashboard-port
  type: LoadBalancer
