k8s/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-dep
spec:
  replicas: 1 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 9411
      restartPolicy: Always # Adjust the restart policy as needed
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-svc
spec:
  selector:
    app: jaeger
  type: LoadBalancer
  ports:
    - name: jport1
      protocol: UDP
      port: 5775
      targetPort: 5775
    - name: jport2
      protocol: UDP
      port: 6831
      targetPort: 6831
    - name: jport3
      protocol: UDP
      port: 6832
      targetPort: 6832
    - name: jport4
      port: 5778
      targetPort: 5778
    - name: jport5
      port: 16686
      targetPort: 16686
    - name: jport6
      port: 14268
      targetPort: 14268
    - name: jport7
      port: 9411
      targetPort: 9411
